--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -31,12 +30,14 @@
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.1",
     "@types/jasmine": "~4.3.0",
+    "firebase-tools": "^12.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "tslib": "^2.5.0",
     "typescript": "~5.0.4"
   }
 }
